# phonemoro

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
data-preparation/: .gitignore  Makefile  README.md
data-preparation/en/: Makefile  create_cleaned_json.py  create_fst_training_lexicon.py  pull_data_dict.sh
phonemizer-cli/: Cargo.toml  README.md
phonemizer-cli/src/: main.rs
phonemizer-common/: Cargo.toml  README.md
phonemizer-common/src/: lib.rs
phonemizer-macros/: Cargo.toml  README.md
phonemizer-macros/src/: dataset_parsing.rs  lib.rs
phonemoro-cli/: Cargo.toml  README.md
phonemoro-cli/src/: main.rs
phonemoro-common/: Cargo.toml  README.md
phonemoro-macros/: Cargo.toml  README.md
phonemoro-macros/src/: dataset_parsing.rs  lib.rs
src/: lib.rs
src/en/: constants.rs  mod.rs  phonemizer.rs  tokenizer.rs  word2ipa.rs
