[workspace]
members = [ "phonemizer-macros", "phonemizer-common", "phonemizer-cli"]
resolver = "2"

[package]
name = "phonemizer-rs"
version = "0.1.0"
edition = "2024"
authors = ["lastleont"]

[dependencies]
phonemizer-common = { version = "0.1.0", path = "./phonemizer-common" }
phonemizer-macros = { version = "0.1.0", path = "./phonemizer-macros" }
anyhow = "1.0.95"
logos = "0.15.0"
phf = { version = "0.11.3", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
tokenizers = "0.21.0"
phonetisaurus-g2p = "0.1.1"
