[workspace]
members = [ "phonemoro-macros", "phonemoro-common", "phonemoro-cli"]
resolver = "2"

[package]
name = "phonemoro"
version = "0.2.0"
edition = "2024"
authors = ["lastleont"]

[dependencies]
phonemoro-common = { version = "0.2.0", path = "./phonemoro-common" }
phonemoro-macros = { version = "0.2.0", path = "./phonemoro-macros" }
anyhow = "1.0.95"
logos = "0.15.0"
phf = { version = "0.11.3", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
tokenizers = "0.21.0"
phonetisaurus-g2p = "0.1.1"
