[package]
name = "phonemizer-common"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["g2p", "linguistics", "phonemizer"]
authors = ["lastleon <lastleon@posteo.de>"]
description = "Common datastructures and code for phonemizer-rs"
repository = "https://github.com/lastleon/phonemizer-rs/tree/main/phonemizer-common"

[dependencies]
phf = "0.11.3"
