[package]
name = "phonemizer-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["proc-macro", "json", "phf"]
authors = ["lastleon <lastleon@posteo.de>"]
description = "proc-macros for phonemizer-rs"
repository = "https://github.com/lastleon/phonemizer-rs/tree/main/phonemizer-macros"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.97"
phf_codegen = "0.11.3"
phonemizer-common = { version = "0.1.0", path = "../phonemizer-common" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"

[dev-dependencies]
phf = "0.11.3"
