[package]
name = "phonemoro-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
keywords = ["g2p", "linguistics", "phonemizer"]
authors = ["lastleon <lastleon@posteo.de>"]
description = "CLI for phonemoro"
repository = "https://github.com/lastleon/phonemoro/tree/main/phonemoro-cli"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
phonemoro = { version = "0.2.0", path = ".." }
